--- a/00-Starter-Seed/ServiceStack-Auth0-Sample/Views/Home/default.cshtml
+++ b/00-Starter-Seed/ServiceStack-Auth0-Sample/Views/Home/default.cshtml
@@ -9,18 +9,17 @@
     <script src="jqunback-1.51.min.js"></script>
 
       <!-- Replace with your settings-->
-      <script src="https://cdn.auth0.com/js/lock-9.0.min.js"></script>
+      <script src="http://cdn.auth0.com/js/lock/10.6.1/lock.min.js"></script>
       <script type="text/javascript">
-          var lock = new Auth0Lock('@ViewData["client_id"]', '@ViewData["domain"]');
+          var lock = new Auth0Lock('@ViewData["client_id"]', '@ViewData["domain"]', {
+              auth: {
+                  redirectUrl: '@ViewData["callback"]'
+                , responseType: 'code'
+              }
+          });
 
           function signin() {
-              lock.show({
-                  callbackURL: '@ViewData["callback"]'
-                , responseType: 'code'
-                , authParams: {
-                    scope: 'openid name email'
-                }
-              });
+              lock.show();
           }
       </script>
       <script type="text/javascript">
